# src/models/store.dao.js
@@ -1,7 +1,7 @@
 import { pool } from "../../config/db.config.js";
 import { BaseError } from "../../config/error.js";
 import { status } from "../../config/response.status.js";
-import { insertStoreSql, getStoreById, insertReviewSql, getReviewById } from "./store.sql.js";
+import { insertStoreSql, getStoreById, insertReviewSql, getReviewById, getMissionById, insertMissionSql, changeStatusToProgress,  changeStatusToCompleted, getMemberMissionById} from "./store.sql.js";
 
 
 export const addStore = async (data) => {
@@ -74,3 +74,79 @@ export const getReview = async (reviewId) => {
         throw new BaseError(status.PARAMETER_IS_WRONG);
     }
 }
+
+export const addMission = async (data) => {
+    try{
+        const {store_id, name, mission_spec, reward} = data;
+        const conn = await pool.getConnection();
+        const store = await getStore(store_id);
+        if(!store.length){
+            throw new BaseError(status.NOT_FOUND);
+        }
+        const result = await pool.query(insertMissionSql, [
+            store_id, name ,mission_spec, reward
+        ]);
+
+        conn.release();
+        return result[0].insertId;
+    }catch(err) {
+        console.log('addMission Error:', err);
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const getMission = async (missionId) =>{
+    try {
+        const conn = await pool.getConnection();
+        const [mission] = await pool.query(getMissionById, missionId);
+
+        console.log(mission);
+
+        if(mission.length==0){
+            return -1;
+        }
+
+        conn.release();
+        return mission;
+    } catch(err){
+        console.log('getMission Error:',err);
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const getMemberMission = async (memberMissionId) => {
+    try{
+        const conn = await pool.getConnection();
+        const [memberMission] = await pool.query(getMemberMissionById,memberMissionId)
+
+        if(memberMission.length==0){
+            return -1;
+        }
+
+        conn.release();
+        return memberMission;
+    }catch(err){
+        console.log('getMemberMission Error:',err);
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const modifyMemberMission = async (data) => {
+    try{
+        const values = [data.status, data.member_mission_id]
+        const conn = await pool.getConnection();
+        let result;
+    
+        if (data.status == 'In_Progress'){
+            [result] = await pool.query(changeStatusToProgress, values);
+        } else if(data.status == 'Completed'){
+            [result] = await pool.query(changeStatusToCompleted,values);
+        }
+        conn.release();
+        return data.member_mission_id;
+    } catch(err) {
+        console.log('updateMemberMission Error:', err);
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
