# swagger/store.swagger.yaml
@@ -98,14 +98,10 @@ paths:
               type: number
               description: 작성하는 멤버의 id
               example: 1
-            store_id:
-              type: number
-              description: 작성할 가게의 id
-              example: 1
             score:
               type: number
               description: 리뷰 점수
-              example: 5d
+              example: 5
             content:
               type: string
               description: 리뷰 내용
@@ -132,9 +128,159 @@ paths:
                 type: object
                 example: {
                   "member_id": 1,
-                  "user_id": 1,
                   "score": 5,
                   "content": "swagger Test Store Reivew Test Content",
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+  /store/mission/1:
+    post:
+      tags:
+        - Mission
+      summary: 가게에 미션 생성
+      parameters:
+      - name: createMission
+        in: body
+        required: true
+        schema:
+          properties:
+            name:
+              type: string
+              description: 미션 제목
+              example: swagger mission name test
+            mission_spec:
+              type: string
+              description: 미션 내용
+              example: swagger mission spec test
+            reward:
+              type: number
+              description: 미션 성공 시 받는 포인트
+              example: 30
+      responses:
+        '200':
+          description: 리뷰 생성 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  "name": swagger mission name,
+                  "mission_spec": swagger mission spec,
+                  "reward": 30,
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+  /store/mission/1?status=In_Progress:
+    patch:
+      tags:
+        - Mission
+      summary: 미션 상태 변경
+      parameters:
+      - name: changeMissionStatus
+      responses:
+        '200':
+          description: 리뷰 생성 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  status: In_Progress,
+                  id: 1,
                 }
                 
         '400':
